k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buildtools-examples
  annotations:
    kubernetes.io/change-cause: "${TIMESTAMP} Deployed commit id: ${COMMIT}"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: buildtools-examples
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: buildtools-examples
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: "app"
                  operator: In
                  values:
                  - buildtools-examples
              topologyKey: kubernetes.io/hostname
      containers:
      - image: 292662267961.dkr.ecr.eu-north-1.amazonaws.com/buildtools-examples:${COMMIT}
        ports:
          - name: http-port
            containerPort: 8080
            protocol: TCP
        readinessProbe:
          httpGet:
            path: /healthz
            port: http-port
          periodSeconds: 10
          failureThreshold: 1
        livenessProbe:
          httpGet:
            path: /healthz
            port: http-pprt
          failureThreshold: 1
          periodSeconds: 10
        startupProbe:
          httpGet:
            path: /healthz
            port: http-port
          failureThreshold: 30
          periodSeconds: 10
        resources:
          limits:
            cpu: 100m
            memory: 512Mi
          requests:
            cpu: 50m
            memory: 256Mi
        name: buildtools-examples
