k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: buildtools-examples
spec:
  type: NodePort
  ports:
  - name: http-port
    port: 80
    targetPort: http-port
    protocol: TCP
  selector:
    app: buildtools-examples
