k8s/ingress-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: buildtools-examples
spec:
  rules:
  - host: "examples.internal"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: buildtools-examples
            port: 
              number: 80
