k8s/ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: buildtools-examples
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: default-ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  rules:
  - host: "examples.k8s.sparetimecoders.com"
    http:
      paths:
      - path: "/*"
        pathType: Prefix
        backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation        
      - path: "/*"
        pathType: Prefix
        backend:
          service:
            name: buildtools-examples
            port: 
              number: 80
